--- a/packages/function-registry/package.json
+++ b/packages/function-registry/package.json
@@ -2,6 +2,7 @@
   "name": "@foozle/function-registry",
   "version": "0.0.0",
   "description": "Provides a mechanism to register and to trigger functions",
+  "main": "create-registry.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
