--- a/packages/camera/package.json
+++ b/packages/camera/package.json
@@ -2,11 +2,17 @@
   "name": "@foozle/camera",
   "version": "0.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "main.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "development": "webpack --mode development --config webpack.config.js",
+    "production": "webpack --mode production --config webpack.config.js"
   },
   "keywords": [],
   "author": "Lars Wobus",
-  "license": "MIT"
+  "license": "MIT",
+  "devDependencies": {
+    "webpack": "^4.29.3",
+    "webpack-cli": "^3.2.3"
+  }
 }
