--- a/packages/camera/package.json
+++ b/packages/camera/package.json
@@ -5,13 +5,14 @@
   "main": "main.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "development": "webpack --mode development --config webpack.config.js",
-    "production": "webpack --mode production --config webpack.config.js"
+    "development": "webpack --mode development --config webpack.development.config.babel.js",
+    "production": "webpack --mode production --config webpack.production.config.babel.js"
   },
   "keywords": [],
   "author": "Lars Wobus",
   "license": "MIT",
   "devDependencies": {
+    "babel-plugin-transform-es2015-arrow-functions": "^6.22.0",
     "webpack": "^4.29.3",
     "webpack-cli": "^3.2.3"
   }
