--- a/packages/camera/package.json
+++ b/packages/camera/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@foozle/camera",
+  "name": "@foozle/orbit-camera",
   "version": "0.0.0",
   "description": "",
   "main": "main.js",
