Fix package description

--- a/packages/scene-preparation/package.json
+++ b/packages/scene-preparation/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@foozle/scene-preparation",
   "version": "0.0.0",
-  "description": "Lars Wobus",
+  "description": "",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "development": "webpack --mode development --config webpack.development.config.babel.js",
