Packaging only the minimum

--- a/packages/scene-preparation/package.json
+++ b/packages/scene-preparation/package.json
@@ -2,6 +2,7 @@
   "name": "@foozle/scene-preparation",
   "version": "0.0.0",
   "description": "",
+  "main": "dist/scene-preparation",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "development": "webpack --mode development --config webpack.development.config.babel.js",
