--- a/package.json
+++ b/package.json
@@ -13,11 +13,14 @@
     "babel-eslint": "^10.0.1",
     "babel-jest": "^24.0.0",
     "babel-loader": "^8.0.5",
+    "babel-plugin-transform-es2015-arrow-functions": "^6.22.0",
     "babel-preset-env": "^1.7.0",
     "eslint": "^5.13.0",
     "eslint-config-airbnb": "^17.1.0",
     "eslint-plugin-import": "^2.16.0",
     "jest": "^24.0.0",
-    "lerna": "^3.10.7"
+    "lerna": "^3.10.7",
+    "webpack": "^4.29.3",
+    "webpack-cli": "^3.2.3"
   }
 }
