--- a/packages/orbit-camera/package.json
+++ b/packages/orbit-camera/package.json
@@ -10,10 +10,5 @@
   },
   "keywords": [],
   "author": "Lars Wobus",
-  "license": "MIT",
-  "devDependencies": {
-    "babel-plugin-transform-es2015-arrow-functions": "^6.22.0",
-    "webpack": "^4.29.3",
-    "webpack-cli": "^3.2.3"
-  }
+  "license": "MIT"
 }
