--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "license": "MIT",
   "scripts": {
     "test": "jest",
-    "tarball": "lerna exec -- npm pack"
+    "tarball": "lerna exec -- npm pack && lerna exec -- move *.tgz ../../../foozle-tarballs"
   },
   "devDependencies": {
     "@babel/core": "^7.2.2",
