--- a/packages/application-states/package.json
+++ b/packages/application-states/package.json
@@ -3,7 +3,9 @@
   "version": "0.0.0",
   "description": "",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "development": "echo \"Info: no webpack configuration specified\" && exit 0",
+    "production": "echo \"Info: no webpack configuration specified\" && exit 0"
   },
   "keywords": [],
   "author": "Lars Wobus",
