--- a/packages/time/package.json
+++ b/packages/time/package.json
@@ -4,7 +4,9 @@
   "description": "",
   "main": "main.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "development": "echo \"Info: no webpack configuration specified\" && exit 0",
+    "production": "echo \"Info: no webpack configuration specified\" && exit 0"
   },
   "keywords": [],
   "author": "Lars Wobus",
