Gamepad polling only when vr is enabled

--- a/packages/oculus-controller/package.json
+++ b/packages/oculus-controller/package.json
@@ -10,5 +10,8 @@
   },
   "keywords": [],
   "author": "Lars Wobus",
-  "license": "MIT"
+  "license": "MIT",
+  "dependencies": {
+    "@foozle/function-registry": "^0.0.0"
+  }
 }
