--- a/packages/gamepad-system/package.json
+++ b/packages/gamepad-system/package.json
@@ -13,5 +13,8 @@
   "license": "MIT",
   "dependencies": {
     "@foozle/function-registry": "^0.0.0"
+  },
+  "devDependencies": {
+    "copy-webpack-plugin": "^5.0.0"
   }
 }
