Apply new logic to xbox360 related scripts

--- a/packages/gamepad-system/src/examples/data/xbox360-mapping.json
+++ b/packages/gamepad-system/src/examples/data/xbox360-mapping.json
@@ -1,22 +1,22 @@
 [
-  { "name": "a", "defaultValue": false, "entityId": 0, "scriptName": "Xbox360InputStateExample", "cbPressed": "aPressed", "cbReleased": "aReleased" },
-  { "name": "b", "defaultValue": false, "entityId": 0, "scriptName": "Xbox360InputStateExample", "cbPressed": "bPressed", "cbReleased": "bReleased" },
-  { "name": "x", "defaultValue": false, "entityId": 0, "scriptName": "Xbox360InputStateExample", "cbPressed": "xPressed", "cbReleased": "xReleased" },
-  { "name": "y", "defaultValue": false, "entityId": 0, "scriptName": "Xbox360InputStateExample", "cbPressed": "yPressed", "cbReleased": "yReleased" },
-  { "name": "bumperLeft","defaultValue": false, "entityId": 0, "scriptName": "Xbox360InputStateExample", "cbPressed": "bumperLeftPressed", "cbReleased": "bumperLeftReleased" },
-  { "name": "bumperRight", "defaultValue": false, "entityId": 0, "scriptName": "Xbox360InputStateExample", "cbPressed": "bumperRightPressed", "cbReleased": "bumperRightReleased" },
-  { "name": "triggerLeft","defaultValue": false, "entityId": 0, "scriptName": "Xbox360InputStateExample", "cbPressed": "triggerLeftPressed", "cbReleased": "triggerLeftReleased" },
-  { "name": "triggerRight", "defaultValue": false, "entityId": 0, "scriptName": "Xbox360InputStateExample", "cbPressed": "triggerRightPressed", "cbReleased": "triggerRightReleased" },
-  { "name": "back", "defaultValue": false, "entityId": 0, "scriptName": "Xbox360InputStateExample", "cbPressed": "backPressed", "cbReleased": "backReleased" },
-  { "name": "start", "defaultValue": false, "entityId": 0, "scriptName": "Xbox360InputStateExample", "cbPressed": "startPressed", "cbReleased": "startReleased" },
-  { "name": "stickLeft", "defaultValue": false, "entityId": 0, "scriptName": "Xbox360InputStateExample", "cbPressed": "stickLeftPressed", "cbReleased": "stickLeftReleased" },
-  { "name": "stickRight", "defaultValue": false, "entityId": 0, "scriptName": "Xbox360InputStateExample", "cbPressed": "stickRightPressed", "cbReleased": "stickRightReleased" },
-  { "name": "up", "defaultValue": false, "entityId": 0, "scriptName": "Xbox360InputStateExample", "cbPressed": "upPressed", "cbReleased": "upReleased" },
-  { "name": "down", "defaultValue": false, "entityId": 0, "scriptName": "Xbox360InputStateExample", "cbPressed": "downPressed", "cbReleased": "downReleased" },
-  { "name": "left", "defaultValue": false, "entityId": 0, "scriptName": "Xbox360InputStateExample", "cbPressed": "leftPressed", "cbReleased": "leftReleased" },
-  { "name": "right", "defaultValue": false, "entityId": 0, "scriptName": "Xbox360InputStateExample", "cbPressed": "rightPressed", "cbReleased": "rightReleased" },
-  { "name": "stickLeftX", "defaultValue": 0, "entityId": 0, "scriptName": "Xbox360InputStateExample", "cbChanged": "stickLeftXChanged" },
-  { "name": "stickLeftY", "defaultValue": 0, "entityId": 0, "scriptName": "Xbox360InputStateExample", "cbChanged": "stickLeftYChanged" },
-  { "name": "stickRightX", "defaultValue": 0, "entityId": 0, "scriptName": "Xbox360InputStateExample", "cbChanged": "stickRightXChanged" },
-  { "name": "stickRightY", "defaultValue": 0, "entityId": 0, "scriptName": "Xbox360InputStateExample", "cbChanged": "stickRightYChanged" }
+  { "name": "_a", "defaultValue": false, "entityId": 0, "scriptName": "Xbox360InputStateExample", "cbPressed": "aPressStart", "cbReleased": "aPressEnd" },
+  { "name": "_b", "defaultValue": false, "entityId": 0, "scriptName": "Xbox360InputStateExample", "cbPressed": "bPressStart", "cbReleased": "bPressEnd" },
+  { "name": "_x", "defaultValue": false, "entityId": 0, "scriptName": "Xbox360InputStateExample", "cbPressed": "xPressStart", "cbReleased": "xPressEnd" },
+  { "name": "_y", "defaultValue": false, "entityId": 0, "scriptName": "Xbox360InputStateExample", "cbPressed": "yPressStart", "cbReleased": "yPressEnd" },
+  { "name": "_bumperLeft","defaultValue": false, "entityId": 0, "scriptName": "Xbox360InputStateExample", "cbPressed": "bumperLeftPressStart", "cbReleased": "bumperLeftPressEnd" },
+  { "name": "_bumperRight", "defaultValue": false, "entityId": 0, "scriptName": "Xbox360InputStateExample", "cbPressed": "bumperRightPressStart", "cbReleased": "bumperRightPressEnd" },
+  { "name": "_triggerLeft","defaultValue": false, "entityId": 0, "scriptName": "Xbox360InputStateExample", "cbPressed": "triggerLeftPressStart", "cbReleased": "triggerLeftPressEnd" },
+  { "name": "_triggerRight", "defaultValue": false, "entityId": 0, "scriptName": "Xbox360InputStateExample", "cbPressed": "triggerRightPressStart", "cbReleased": "triggerRightPressEnd" },
+  { "name": "_back", "defaultValue": false, "entityId": 0, "scriptName": "Xbox360InputStateExample", "cbPressed": "backPressStart", "cbReleased": "backPressEnd" },
+  { "name": "_start", "defaultValue": false, "entityId": 0, "scriptName": "Xbox360InputStateExample", "cbPressed": "startPressStart", "cbReleased": "startPressEnd" },
+  { "name": "_stickLeft", "defaultValue": false, "entityId": 0, "scriptName": "Xbox360InputStateExample", "cbPressed": "stickLeftPressStart", "cbReleased": "stickLeftPressEnd" },
+  { "name": "_stickRight", "defaultValue": false, "entityId": 0, "scriptName": "Xbox360InputStateExample", "cbPressed": "stickRightPressStart", "cbReleased": "stickRightPressEnd" },
+  { "name": "_up", "defaultValue": false, "entityId": 0, "scriptName": "Xbox360InputStateExample", "cbPressed": "upPressStart", "cbReleased": "upPressEnd" },
+  { "name": "_down", "defaultValue": false, "entityId": 0, "scriptName": "Xbox360InputStateExample", "cbPressed": "downPressStart", "cbReleased": "downPressEnd" },
+  { "name": "_left", "defaultValue": false, "entityId": 0, "scriptName": "Xbox360InputStateExample", "cbPressed": "leftPressStart", "cbReleased": "leftPressEnd" },
+  { "name": "_right", "defaultValue": false, "entityId": 0, "scriptName": "Xbox360InputStateExample", "cbPressed": "rightPressStart", "cbReleased": "rightPressEnd" },
+  { "name": "_stickLeftX", "defaultValue": 0, "entityId": 0, "scriptName": "Xbox360InputStateExample", "cbChanged": "stickLeftXChanged" },
+  { "name": "_stickLeftY", "defaultValue": 0, "entityId": 0, "scriptName": "Xbox360InputStateExample", "cbChanged": "stickLeftYChanged" },
+  { "name": "_stickRightX", "defaultValue": 0, "entityId": 0, "scriptName": "Xbox360InputStateExample", "cbChanged": "stickRightXChanged" },
+  { "name": "_stickRightY", "defaultValue": 0, "entityId": 0, "scriptName": "Xbox360InputStateExample", "cbChanged": "stickRightYChanged" }
 ]
